[package]
name = "dictionary-infra"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
shared = { path = "../shared" }
dictionary-app = { path = "../dictionary-app" }
dictionary-domain = { path = "../dictionary-domain" }

railgun = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
