[package]
name = "dictionary"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
shared = { path = "../shared" }
dictionary-app = { path = "../dictionary-app" }
dictionary-infra = { path = "../dictionary-infra" }

railgun = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
