[package]
name = "features"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
dictionary = { path = "../dictionary" }
library = { path = "../library" }
pronunciation = { path = "../pronunciation" }
scheduler = { path = "../scheduler" }
settings = { path = "../settings" }
shared = { path = "../shared" }
statistics = { path = "../statistics" }
storage = { path = "../storage" }

hex.workspace = true
sha2.workspace = true

[dev-dependencies]

[lints]
workspace = true
