[package]
name = "library-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
shared = { path = "../shared" }
library-domain = { path = "../library-domain" }

railgun = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
