[package]
name = "pronunciation-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
shared = { path = "../shared" }
pronunciation-domain = { path = "../pronunciation-domain" }

railgun = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
